syntax = "proto3";

package calculator;
option go_package = "calculator/calculatorpb";

message SumRequest {
  int32 a = 1;
  int32 b = 2;
}

message SumResponse {
  int32 sum = 1;
}

message PrimeNumberDecompositionRequest {
  int32 number = 1;
}

message PrimeNumberDecompositionResponse {
  int32 prime_factor = 1;
}

message ComputeAverageRequest {
  int32 number = 1;
}

message ComputeAverageResponse {
  double average = 1;
}

message FindMaximumRequest {
  int32 number = 1;
}

message FindMaximumResponse {
  int32 maximum = 1;
}

message SquareRootRequest {
  int32 number = 1;
}

message SquareRootResponse {
  double square_root = 1;
}

service CalculatorService {
    rpc Sum (SumRequest) returns (SumResponse) {

    };

    rpc PrimeNumberDecomposition (PrimeNumberDecompositionRequest) returns (stream PrimeNumberDecompositionResponse) {

    };

    rpc ComputeAverage (stream ComputeAverageRequest) returns (ComputeAverageResponse) {

    };

    rpc FindMaximum (stream FindMaximumRequest) returns (stream FindMaximumResponse) {

    };

    rpc SquareRoot (SquareRootRequest) returns (SquareRootResponse) {

    };

    

}